--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,209 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&family=Philosopher:wght@400;700&family=Roboto:wght@400;700&display=swap');
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0; 
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: #fff;
+  color: #222;
+  font-family: 'Montserrat', sans-serif;
+  font-weight:  300;
+}
+
+.wrapper {
+  width: 1280px;
+  margin: 50px auto;
+}
+
+header {
+  position: relative;
+}
+
+header .logo {
+  font-weight: 600;
+  font-size: 20px;
+}
+
+Header ul.nav {
+  float: right;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color:#222;
+}
+
+Header .shop-cart-button {
+  float: right;
+  cursor: pointer;
+  transition: color, transform 500ms ease;
+  margin-right: 50px;
+  margin-top: 7px;
+}
+
+Header .shop-cart-button:hover,
+Header .shop-cart-button.active {
+  color: #dc3d3d;
+  transform: scale(1.5);
+}
+
+header .shop-cart {
+  position: absolute;
+  top: 30px;
+  right: 0;
+  width: 450px; 
+  background: #fafafa;
+  -webkit-box-shadow: 4px 5px 15px 7px #606060; 
+  box-shadow: 4px 5px 15px 7px #606060;
+  z-index: 100;
+  padding: 20px;
+  padding-bottom: 0;
+}
+
+header .shop-cart .empty h2 {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+header .shop-cart .item {
+  width: 100%;
+  float: left;
+  margin-bottom: 20px;
+}
+
+header .shop-cart .item img {
+   width: 70px;
+   float: left;
+   margin-right: 20px;
+    
+}
+
+header .shop-cart .item .delete-icon {
+  color: #222;
+  float: right;
+  position: relative;
+  top: -20px;
+  cursor: pointer;
+  transition: color, transform 500ms ease;
+}
+
+header .shop-cart .item .delete-icon:hover {
+  color: #ca5252;
+  transform: scale(1.5);
+}
+
+header .shop-cart .summa {
+  float: left;
+  width: 100%;
+  font-size: 20px;
+  margin-bottom: 20px;
+  
+}
+
+
+header .shop-cart .item h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+header .shop-cart .item p {
+  color: #797979;
+  font-weight: 600; 
+}
+
+Header ul.nav li {
+  margin-top: 5px;
+  display: inline;
+  margin-left: 0;
+  cursor: pointer;
+  transition: opacity 500ms ease;
+}
+
+Header ul.nav li:hover {
+  opacity: 0.5;
+}
+
+
+
+
+Header .presentation {
+  margin: 50px 0;
+  background: url('./img/bg.jpeg') no-repeat;
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  background-position: center center;
+  background-blend-mode: multiply;
+  background-color: #bcbcbc;
+  position: relative;
+}
+
+Header .presentation::after{
+  content: 'Choose the best. Choose US.';
+  position: absolute;
+  top: 100px;
+  left: 50px;
+  width: 300px;
+  font-size: 35px;
+  color: #fff;
+  font-weight: 300; 
+}
+
+main {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+main .item {
+  width: 30%;
+  margin-bottom: 50px;
+  background: #f5f5f5;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+main .item img {
+  width: 100%;
+  transition: transform 500ms ease; 
+}
+
+main .item img:hover{
+  transform: scale(1.05);
+}
+
+main h2, main p, main b {
+  margin: 10px 20px;
+  color: #333;
+}
+
+main .add-to-cart {
+   position: absolute;
+   right: 20px;
+   bottom: 20px;
+   background: #333;
+   width: 30px;
+   height: 30px;
+   text-align: center;
+   line-height: 30px;
+   color: #fff;
+   border-radius: 50%;
+   cursor: pointer;
+   font-weight: 600;
+   transition: transform 500ms ease;
+}
+
+main .add-to-cart:hover {
+  transform: scale(1.5);
+  background: #dc3d3d;
+}
+
+footer {
+  text-align: center;
+  margin-top: 100px;
 }
